src/styles/global.css
@charset "UTF-8";

/* Some global styles. */

body {
  font-family: "Nunito", sans-serif;
  font-weight: 300;
  background-color: hsl(60deg, 100%, 97%);
  color: hsl(60deg, 0%, 13%);
  counter-reset: sidenote-counter;
  line-height: 1;
}

:root {
  --list-margin-left: 2em;
  --blockquote-border-width: 0.25em;
}

ul {
  list-style-type: circle;
  margin-left: var(--list-margin-left);
}

/* Re-introduce some basics for ordered lists (numbers + spacing) */
ol li {
  list-style-type: decimal;
  margin-left: var(--list-margin-left);
  padding-left: 1em;
}

/* Make sure strikethroughs are struckthrough */
del {
  text-decoration-line: line-through;
}

em {
  font-style: italic;
}

strong {
  font-weight: bold;
}

/* Shadows */

:root {
  --shadow-color: 0deg 0% 46%;
  --shadow-elevation-low: 0.6px 0.4px 0.5px hsl(var(--shadow-color) / 0.86),
    0.8px 0.6px 0.8px -2.5px hsl(var(--shadow-color) / 0.58),
    2.5px 1.9px 2.4px -5px hsl(var(--shadow-color) / 0.29);
  --shadow-elevation-medium: 0.6px 0.4px 0.5px hsl(var(--shadow-color) / 0.73),
    0.7px 0.6px 0.7px -1.2px hsl(var(--shadow-color) / 0.58),
    2px 1.5px 1.9px -2.5px hsl(var(--shadow-color) / 0.44),
    5.6px 4.2px 5.3px -3.7px hsl(var(--shadow-color) / 0.29),
    12.4px 9.4px 11.7px -5px hsl(var(--shadow-color) / 0.15);
  --shadow-elevation-high: 0.6px 0.4px 0.5px hsl(var(--shadow-color) / 0.67),
    0.6px 0.5px 0.6px -0.6px hsl(var(--shadow-color) / 0.61),
    1.3px 1px 1.2px -1.1px hsl(var(--shadow-color) / 0.54),
    3.1px 2.3px 2.9px -1.7px hsl(var(--shadow-color) / 0.47),
    6.6px 5px 6.2px -2.2px hsl(var(--shadow-color) / 0.4),
    12.3px 9.3px 11.6px -2.8px hsl(var(--shadow-color) / 0.34),
    20.9px 15.8px 19.7px -3.3px hsl(var(--shadow-color) / 0.27),
    32.8px 24.8px 30.8px -3.9px hsl(var(--shadow-color) / 0.2),
    48.7px 36.8px 45.8px -4.4px hsl(var(--shadow-color) / 0.13),
    69.1px 52.2px 65px -5px hsl(var(--shadow-color) / 0.07);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Roboto Slab", serif;
}

h1 {
  font-weight: 600;
  font-size: 2.2rem;
  line-height: 1.4;
  margin-bottom: 1.5rem;
  margin-top: 4rem;
}

h2 {
  font-size: 1.8rem;
  margin-bottom: 1.4rem;
  margin-top: 2.1rem;
  line-height: 1.4;
}

h3 {
  font-size: 1.7rem;
  line-height: 1.4;
}

hr {
  display: block;
  height: 1px;
  width: 55%;
  border: 0;
  border-top: 1px solid #ccc;
  padding: 0;
  margin: 1em auto;
}

/* By default, all link should be underlined & have a pointer */
a:any-link {
  text-decoration: underline;
  cursor: pointer;
}

p,
ol,
ul {
  font-size: 1.2rem;
  line-height: 1.8rem;
}

blockquote {
  --blockquote-border-color: hsl(0deg 0% 44.32%);

  font-size: 1.4rem;
  border-left-style: solid;
  border-color: var(--blockquote-border-color);
  border-left-width: var(--blockquote-border-width);

  /* left padding (distance to border) */
  padding-left: 1.6em;

  /* top & bottom padding */
  --blockquote-padding: 1em;
  padding-top: var(--blockquote-padding);
  padding-bottom: var(--blockquote-padding);
}

/* Work around paragraphs having margins set globally */
blockquote p {
  margin-top: 0;
  margin-bottom: 0;
}

blockquote footer {
  width: 55%;
  font-size: 1.1rem;
  text-align: right;
}

/* Special blockquotes marked as admonitions */
.admonition {
  --admonition-color: hsl(206 71% 40% / 1);
  border-color: var(--admonition-color);
}

.admonition-header {
  font-weight: bold;
  color: var(--admonition-color);
  display: flex;
  gap: 0.5em;
  align-items: center;

  /* Give the main text some room to breath */
  margin-bottom: 0.5em;
}

/* Add spacing between list items */
li + li {
  margin-top: 0.25rem;
}

figure {
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
  max-width: 55%;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  margin: 0 0 3em 0;
}

figcaption {
  float: right;
  clear: right;
  margin-top: 0;
  margin-bottom: 0;
  font-size: 1.1rem;
  line-height: 1.6;
  vertical-align: baseline;
  position: relative;
  max-width: 40%;
}

/* Sidenotes, margin notes, figures, captions */
img {
  max-width: 100%;
}

/* Some content that's supposed to pop out visually */
.pop {
  background-color: #d6d6c7;
  padding: 20px;
  border-radius: 10px;
}

/* Big screens */
@media (min-width: 1112px) {
  .content {
    max-width: 1012px;
    margin: 100px auto;
  }
}

/* small screen */
@media (max-width: 600px) {
  .content {
    margin: 0;
  }
}

@media (min-width: 1112px) {
  .header {
    margin: auto;
    border-bottom-style: solid;
    border-bottom-width: 2px;
    font-size: 1.8rem;
  }
}

/* small screen */
@media (max-width: 1112px) {
  .header {
    margin: auto;
    border-bottom-style: solid;
    border-bottom-width: 2px;
    font-size: 1.4rem;
  }
}

.header .links a {
  padding: 0 0.8rem;
  text-transform: uppercase;
}

.header a:link {
  text-decoration: none;
}

.header a:visited {
  text-decoration: none;
}

.header a:hover {
  text-decoration: underline;
}

.header a:active {
  text-decoration: underline;
}

.header .social a {
  text-decoration: none;
}

.header .nav {
  margin: auto;
  max-width: 1012px;
  padding: 1rem 0.5rem;
}

.header .nav .nav-icon {
  display: inline-block;
  width: 1em;
  height: 1em;
}

.header .nav .social {
  float: right;
}

.intro {
  margin: 8vh 0;
  text-align: center;
}

/* Blog */

.blog {
  margin: 8vh auto;
}

.blog h2 {
  text-align: center;
}

.blog-container {
  display: grid;
  grid-template-columns: 50% 50%;
}

/* medium screen and below */
@media (max-width: 1112px) {
  .blog-container {
    grid-template-columns: 100%;
  }
}

.blog-article {
  padding: 0 1em;
}

/* Space out all top-level elements */
.blog-article > * {
  margin-top: 1.6rem; /* rem to avoid element's line-height impacting the spacing */
}

/* When inline math is the only child (i.e. both first & last child) of a (top-level) paragraph,
 * center it. */
.blog-article > p:has(code:first-child:last-child.language-math.math-inline) {
  text-align: center;
}

/* Center and add margins for all top-level images */
.blog-article > p > img:first-child:last-child {
  max-height: 30em;
  display: block;
  margin-left: auto;
  margin-right: auto;
}

/* Hack since we don't have 'figcaption's (yet): if the paragraph after an image contains a single element, and
 * that element is an <em>, then make it look like a caption.
 */
.blog-article
  > p:has(img:first-child:last-child)
  + p:has(> em:first-child:last-child) {
  text-align: center;
  font-size: 1em;
}

footer {
  text-align: center;
  margin: 30px 0;
}

/* Make the copyright link not so visible */
footer a:link,
footer a:visited {
  text-decoration: none;
}

footer a:active,
footer a:hover {
  text-decoration: underline;
}

.card {
  --shadow-baseline: var(--shadow-elevation-low);
  /* Add shadows to create the "card" effect */
  box-shadow: var(--shadow-baseline);
  transition: 0.3s;
  margin: 2em;
  font-size: 0.8rem;
  border-radius: 0.5em;
  background-color: hsl(60deg, 100%, 99%);
  border: 1px solid hsl(60deg, 60%, 85%);
}

/* small screen */
@media (max-width: 600px) {
  .card {
    box-shadow: none;
    margin: 0;
    border-top: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
    border-radius: 0;
  }

  .card:hover {
    background-color: #f9f9f9;
  }
}

.card h3 {
  text-align: center;
  margin-top: 1.5rem;
}

/* On mouse-over, add a deeper shadow */
.card:hover {
  --shadow-baseline: var(--shadow-elevation-medium);
  cursor: pointer;
}

/* Add some padding inside the card container */
.card-container {
  padding: 1em;
}

.card-container .teaser {
  padding: 0 2em;
  margin-top: 2em;
  margin-bottom: 2em;
}

/* Code styling */

/* inline code */
code {
  font-family: Consolas, "Liberation Mono", Menlo, Courier, monospace;
}

pre {
  border-radius: 5px;
  position: relative;
}

pre > code {
  border-radius: 5px;
  line-height: 1.2em;
  display: inline-block;
  min-width: 100%;
}

/* Code line highlighting */

.line:nth-child(1) {
  padding-top: 1em;
}

.line:last-child {
  padding-bottom: 1em;
}

.line {
  display: inline-block;
  min-width: 100%;
  padding-left: 1em;
  padding-right: 1em;
}

.highlight {
  background: rgba(255, 255, 255, 0.15);
}

/* Everything clipboard related */
pre .clipboard-copy {
  fill: transparent;
}

pre:hover .clipboard-copy {
  fill: white;
}

.clipboard-copy {
  transition: fill 300ms;
  transition: background 100ms;
  position: absolute;
  top: 0;
  right: 0;

  margin: 0.5em;
  padding: 0.5em;
  border: 1px solid transparent;
  border-radius: 5px;
}

.clipboard-copy:hover {
  border: 1px solid white;
}

.clipboard-copy:active {
  background: white;
}

